--- a/.github/workflows/action-slack.yml
+++ b/.github/workflows/action-slack.yml
@@ -9,8 +9,43 @@ jobs:
     steps:
       - name: Slack Notification
         uses: slackapi/slack-github-action@v1.24.0
-        with:
-          channel-id: 'U04KL38250R'
-          slack-message: 'Hello world!'
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+        with:
+          channel-id: 'U04KL38250R'
+          payload: |
+            {
+              "blocks": [
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "A new issue has been created!"
+                  }
+                },
+                {
+                  "type": "section",
+                  "fields": [
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Issue:*\n<${{ github.event.issue.html_url }}|${{ github.event.issue.title }}>"
+                    },
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Opened By:*\n<${{ github.event.issue.user.html_url }}|${{ github.event.issue.user.login }}>"
+                    },
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Repository:*\n<${{ github.event.repository.html_url }}|${{ github.event.repository.full_name }}>"
+                    }
+                  ]
+                },
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "```${{ github.event.issue.body }}```"
+                  }
+                }
+              ]
+            }
