--- a/.github/workflows/action-slack.yml
+++ b/.github/workflows/action-slack.yml
@@ -15,6 +15,8 @@ jobs:
           channel-id: 'U04KL38250R'
           payload: |
             {
+              "unfurl_links": false,
+              "unfurl_media": false,
               "blocks": [
                 {
                   "type": "section",
@@ -29,20 +31,14 @@ jobs:
                     {
                       "type": "mrkdwn",
                       "text": "*Issue:*\n<${{ github.event.issue.html_url }}|${{ github.event.issue.title }}>",
-                      "unfurl_links": true,
-                      "unfurl_media": true
                     },
                     {
                       "type": "mrkdwn",
                       "text": "*Opened By:*\n<${{ github.event.issue.user.html_url }}|${{ github.event.issue.user.login }}>",
-                      "unfurl_links": true,
-                      "unfurl_media": true
                     },
                     {
                       "type": "mrkdwn",
                       "text": "*Repository:*\n<${{ github.event.repository.html_url }}|${{ github.event.repository.full_name }}>",
-                      "unfurl_links": true,
-                      "unfurl_media": true
                     }
                   ]
                 },
