--- a/.github/workflows/action-slack.yml
+++ b/.github/workflows/action-slack.yml
@@ -10,17 +10,18 @@ jobs:
       - name: Gather Assigned Users
         # get channel id based on assigned users
         run: |
-          CHANNELS = () \
-          for i in ${{ github.event.issue.assignees.*.login }}; do \
-            if [ "$i" == "Mutad" ]; then \
-              CHANNELS += 'U04KL38250R' \
-            elif [ "$i" == "user2" ]; then \
-              CHANNELS += 'U04KL38250R' \
-            elif [ "$i" == "user3" ]; then \
-              CHANNELS += 'U04KL38250R' \
-            endif \
-          done \
-          CHANNEL_ID = join(CHANNELS, ', ')
+          CHANNELS=()
+          for i in ${{ github.event.issue.assignees.*.login }}; do
+            if [ "$i" == "Mutad" ]; then
+              CHANNELS+=('U04KL38250R')
+            elif [ "$i" == "user2" ]; then
+              CHANNELS+=('U04KL38250R')
+            elif [ "$i" == "user3" ]; then
+              CHANNELS+=('U04KL38250R')
+            fi
+          done
+          CHANNEL_ID=$(IFS=,; echo "${CHANNELS[*]}")
+          echo "CHANNEL_ID: $CHANNEL_ID"
       - name: Slack Notification
         uses: slackapi/slack-github-action@v1.24.0
         env:
