--- a/.github/workflows/action-slack.yml
+++ b/.github/workflows/action-slack.yml
@@ -12,7 +12,7 @@ jobs:
         run: |
           CHANNELS=()
           echo "Assignees: ${{ join(github.event.issue.assignees.*.login, ', ') }}"
-          for i in ${{ github.event.issue.assignees.*.login }}; do
+          for i in ${{ join(github.event.issue.assignees.*.login, ' ') }}; do
             echo "Assignee: $i"
             if [ "$i" == "Mutad" ]; then
               CHANNELS+=('U04KL38250R')
