--- a/.github/workflows/action-slack.yml
+++ b/.github/workflows/action-slack.yml
@@ -14,13 +14,13 @@ jobs:
           echo "Assignees: ${{ join(github.event.issue.assignees.*.login, ', ') }}"
           for i in ${{ join(github.event.issue.assignees.*.login, ' ') }}; do
             echo "Assignee: $i"
-            if [ "$i" == "Mutad" ]; then
-              CHANNELS+=('U04KL38250R')
-            elif [ "$i" == "user2" ]; then
-              CHANNELS+=('U04KL38250R')
-            elif [ "$i" == "user3" ]; then
-              CHANNELS+=('U04KL38250R')
-            fi
+            for j in ${{ env.USERNAME_TO_CHANNEL_ID }}; do
+              echo "Username: $j"
+              if [[ $i == $j ]]; then
+                echo "Matched: $i"
+                CHANNELS+=(${{ env.USERNAME_TO_CHANNEL_ID[$j] }})
+              fi
+            done
           done
           CHANNEL_ID=$(IFS=,; echo "${CHANNELS[*]}")
           echo "CHANNEL_ID: $CHANNEL_ID"
