--- a/.github/workflows/pull-request-merged.yml
+++ b/.github/workflows/pull-request-merged.yml
@@ -10,7 +10,6 @@ jobs:
       - name: Get linked issues of a PR
         id: get-linked-issues
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PR_ID: ${{ github.event.pull_request.node_id }}
         run: |
           # Note: i'm not sure if this is the best way to get the linked issue id
@@ -32,12 +31,8 @@ jobs:
               }
             }
           }' -f id=$PR_ID --jq '.data.node.timelineItems.nodes[].subject.number')"
-          echo "linked_issue_ids=$linked_issue_ids" >> $GITHUB_OUTPUT
-      - name: Move linked issues to Done column
-        env:
-          ISSUE_IDS: ${{ steps.get-linked-issues.outputs.linked_issue_ids }}
-        run: |
-          for ISSUE_ID in $ISSUE_IDS; do
+
+          for ISSUE_ID in $linked_issue_ids; do
             # get the project card ID associated with the issue
             project_card_id="$( gh api graphql -f query='
             query ($number: Int!) {
