--- a/.github/workflows/pull-request-merged.yml
+++ b/.github/workflows/pull-request-merged.yml
@@ -15,6 +15,7 @@ jobs:
       - name: Get linked issues of a PR
         id: get-linked-issues
         env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PR_ID: ${{ github.event.pull_request.node_id }}
         run: |
           # Note: i'm not sure if this is the best way to get the linked issue id
