--- a/.github/workflows/pull-request-merged.yml
+++ b/.github/workflows/pull-request-merged.yml
@@ -43,6 +43,9 @@ jobs:
           for ISSUE_ID in $linked_issue_ids; do
             echo "Issue ID: $ISSUE_ID"
 
+            # cast to int
+            id_int=$((ISSUE_ID + 0))
+
             # get the project card ID associated with the issue
             project_card_id="$( gh api graphql -f query='
             query ($number: Int!) {
