--- a/.github/workflows/pull-request-merged.yml
+++ b/.github/workflows/pull-request-merged.yml
@@ -73,7 +73,7 @@ jobs:
             # move the project card to the "Done" column
             gh api graphql -f query='
             mutation ($id: ID!) {
-              moveProjectCard(input: {cardId: $id, columnId: "19726775"}) {
+              moveProjectCard(input: {cardId: $id, columnId: 19726775}) {
                 clientMutationId
               }
             }' -f id=$project_card_id
