--- a/.github/workflows/pull-request-merged.yml
+++ b/.github/workflows/pull-request-merged.yml
@@ -70,10 +70,22 @@ jobs:
               continue
             fi
 
+            # get the project column ID for the "Done" column
+            project_column_id="$( gh api graphql -f query='
+            query ($id: ID!) {
+              node(id: $id) {
+                ... on ProjectCard {
+                  column {
+                    id
+                  }
+                }
+              }
+            }' -F id=$project_card_id --jq '.data.node.column.id')"
+
             # move the project card to the "Done" column
             gh api graphql -f query='
             mutation ($id: ID!) {
-              moveProjectCard(input: {cardId: $id, columnId: 19726775}) {
+              moveProjectCard(input: {cardId: $id, columnId: "'$project_column_id'"}) {
                 clientMutationId
               }
             }' -f id=$project_card_id
