--- a/.github/workflows/pull-request-merged.yml
+++ b/.github/workflows/pull-request-merged.yml
@@ -55,6 +55,15 @@ jobs:
                 }
               }
             }
-          }' --jq '.data.node.closingIssuesReferences.edges[]')"
-          echo "Issues: $issues"
+          }' --jq '.data.node.closingIssuesReferences.edges')"
+          echo "issues=$issues" >> $GITHUB_OUTPUT
+      - name: Move Cards
+        id: move-cards
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          issues = ${{ steps.gather-cards.outputs.issues }}
+          print(issues)
+        shell: python
+
 
